--- a/airport/templates/partials/home.html
+++ b/airport/templates/partials/home.html
@@ -19,7 +19,7 @@
         </tr>
         {% for flight in flights %}
           <tr>
-          <td><a href="#">{{ flight.id }}</a></td>
+          <td><a href="{% url 'airport:flight_detail' flight.id %}">{{ flight.id }}</a></td>
           <td>{{ flight.origin }}</td>
           <td>{{ flight.destination }}</td>
           <td>{{ flight.take_off_time }}</td>
