--- a/airport/templates/partials/creat_flight.html
+++ b/airport/templates/partials/creat_flight.html
@@ -1,21 +1,27 @@
-<body>
 {% extends 'base.html' %}
-{% block title %}Creat Post{% endblock %}
+{% block title %}Create Flight{% endblock %}
+{% block body_class %}create-flight-page{% endblock %}
 {% block content %}
-<form method="post" enctype="multipart/form-data">
+<div class="create-flight">
+
+    <h1>Create New Flight</h1>
+
+    <form method="post" enctype="multipart/form-data" class="flight-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <br>
-        <input type="submit" value="submit">
-</form>
-{% if form.errors %}
-    {% for field in form %}
-        {% if field.errors %}
+
+        <input type="submit" value="Submit">
+    </form>
+
+    {% if form.errors %}
+    <div class="form-errors">
+        {% for field in form %}
             {% for error in field.errors %}
-                    {{ field.label }} : {{ error }}
-                {% endfor %}
-            {% endif %}
+                <p><strong>{{ field.label }}:</strong> {{ error }}</p>
+            {% endfor %}
         {% endfor %}
-{% endif %}
+    </div>
+    {% endif %}
+
+</div>
 {% endblock %}
-</body>
