--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'airport/home.css' %}">
+
 </head>
 <body>
 {% block content %}{% endblock %}
