--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'airport/home.css' %}">
 
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
 {% block content %}{% endblock %}
 </body>
 </html>
